--- a/TestJson/TestJson.vcxproj.filters
+++ b/TestJson/TestJson.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClInclude Include="pch.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="sqlite3.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="cJSON.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -29,17 +26,11 @@
     <ClCompile Include="pch.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Server.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="sqlite3.c">
+    <ClCompile Include="TestJson.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="cJSON.c">
       <Filter>源文件</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
