--- a/Datanode/Datanode.vcxproj.filters
+++ b/Datanode/Datanode.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="sqlite3.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DataNode.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
